completely redone the architecture of the app
